# ha-fireboard

./: .gitignore  CHANGELOG.md  LICENSE  README.md  hacs.json  pyproject.toml  requirements_dev.txt
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: lint-test.yml  validate.yml
custom_components/fireboard/: __init__.py  api.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py
custom_components/fireboard/translations/: en.json
docs/: architecture.md
tests/: conftest.py  test_init.py
